# nanoquantization

./: .gitignore  README.md  example.py  launch_docker.sh  main.py  pyproject.toml
nanoquantization/: config.py  context.py  hf_config_inspector.py  sampling_params.py
nanoquantization/awq/: quant_config.py  quantizer.py
nanoquantization/awq/layers/: gemm.py  norm.py  rope.py
nanoquantization/awq/models/: qwen3.py
nanoquantization/awq/modules/: gemm.py
nanoquantization/awq/tests/: dequantization_kernel.py
nanoquantization/awq/utils/: calibration_data.py  module.py
nanoquantization/benchmark/: perplexity.py
nanoquantization/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanoquantization/layers/: attention.py  gemm.py  norm.py  rope.py
nanoquantization/models/: qwen3.py  qwen3_quantized.py  sampler.py
nanoquantization/utils/: loader.py  quantization.py
scripts/: load_quantized_model.py  qwen3_0pt6_billion.py
